работа над админкой

--- a/application/views/admin/index.twig
+++ b/application/views/admin/index.twig
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Untitled</title>
-  <link rel="stylesheet" type="text/css" href="my.css">
-</head>
-<body>
-       
-</body>
-</html>
+{% extends "admin/_layout.twig" %}
+
+{% block title %}Админка{% endblock %}
+
+{% block content %}
+Админка
+{% endblock %}
