--- a/application/views/home/index.twig
+++ b/application/views/home/index.twig
@@ -1,1 +1,30 @@
-ГЛАВНАЯ
+{% extends "home/_layout.twig" %}
+
+{% block title %}Главнгая{% endblock %}
+
+{% block content %}
+
+<div class="row">
+  <div class="span3">левая</div>
+  <div class="span9">
+    <div class="row-fluid" style="height: 50px; background: #E0E0E0;">
+       
+    </div>
+    <div class="row-fluid paved">
+      <div class="pave6 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave6 right"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
