--- a/application/views/home/index.twig
+++ b/application/views/home/index.twig
@@ -11,18 +11,18 @@
        
     </div>
     <div class="row-fluid paved">
-      <div class="pave6 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave6 right"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
-      <div class="pave3 left"><div class="inner"><div class="outer"></div></div></div>
+      <div class="span6">Span6</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
+      <div class="span6 right">Span6</div>
+      <div class="span3">Span3</div>
+      <div class="span3">Span3</div>
     </div>
   </div>
 </div>
