--- a/application/views/merchant/_layout.twig
+++ b/application/views/merchant/_layout.twig
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>{% block title %}{% endblock %}</title>
+  <base href="/merchant/">
   
   <link rel="stylesheet" href="/bundles/bootstrap/css/bootstrap.min.css">
   
@@ -11,10 +12,10 @@
 </head>
 <body>
 
-  {% include 'admin/_topmenu.twig' %}
+  {% include 'merchant/_topmenu.twig' %}
 
   <div class="container" style="margin-top: 50px;">
-    {% include 'admin/_top_submenu.twig' %}
+    {% include 'merchant/_top_submenu.twig' %}
     {% block content %}{% endblock %}
   </div> 
   
